scrollbar colors fix

--- a/src/App.css
+++ b/src/App.css
@@ -225,12 +225,12 @@ input {
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1;
+  background: #333;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: #222;
 }
 
 /* Handle on hover */
